--- a/app/src/main/res/layout/fragment_vaccine_details.xml
+++ b/app/src/main/res/layout/fragment_vaccine_details.xml
@@ -158,42 +158,49 @@
 
     <TextView
         style="@style/vaccineInfoHeadlinesDetails"
-        android:id="@+id/description_text"
-        android:text="@string/description_of_the_vaccine_type_the_vaccine_made_country_and_more"
+        android:id="@+id/name_text"
+        tools:text="@string/name"
+        android:paddingHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
 
     <TextView
-        style="@style/vaccineInfoHeadlines"
-        android:id="@+id/production"
-        android:text="@string/production"
+        style="@style/vaccineInfoHeadlinesDetails"
+        android:id="@+id/manufacturer"
+        tools:text="@string/Manufacturer"
+        android:paddingHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name_text" />
 
 
     <TextView
-        android:id="@+id/production_description"
+        android:id="@+id/type_text"
         style="@style/vaccineInfoHeadlinesDetails"
-        android:text="@string/iraq_salahuddin_samarra_company"
+        tools:text="@string/type_of_vaccine"
+        android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/production" />
+        app:layout_constraintTop_toBottomOf="@+id/manufacturer" />
 
     <TextView
-        style="@style/vaccineInfoHeadlines"
-        android:id="@+id/date"
-        android:text="@string/date_of_production"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/production_description" />
-
-    <TextView
-        android:id="@+id/datedescription"
         style="@style/vaccineInfoHeadlinesDetails"
-        android:text="@string/the_vaccine_is_start_active_in_june_2021"
+        android:id="@+id/number_text"
+        tools:text="@string/number_of_shots"
+        android:paddingHorizontal="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/type_text" />
+
+    <TextView
+        android:id="@+id/how_given_text"
+        style="@style/vaccineInfoHeadlinesDetails"
+        tools:text="@string/how_given"
+        android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/number_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
