--- a/app/src/main/res/xml/fragment_statistics_scene.xml
+++ b/app/src/main/res/xml/fragment_statistics_scene.xml
@@ -2,16 +2,6 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="1000">
-        <KeyFrameSet>
-
-        </KeyFrameSet>
-        <OnSwipe motion:touchAnchorId="@+id/my_main_constraint" />
-    </Transition>
-
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/my_main_constraint"
@@ -19,25 +9,26 @@
             motion:layout_constraintLeft_toLeftOf="parent"
             motion:layout_constraintRight_toRightOf="parent" />
         <Constraint
-            android:id="@+id/statistics_animation"
+            android:id="@+id/swipe_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="150dp"/>
+            motion:lottie_colorFilter="@color/white"
+            android:layout_marginBottom="50dp"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/my_main_constraint"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="100dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintLeft_toLeftOf="parent"
             motion:layout_constraintRight_toRightOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
         <Constraint
-            android:id="@+id/statistics_animation"
+            android:id="@+id/swipe_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="invisible"
@@ -45,4 +36,12 @@
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
+
+    <Transition
+        motion:constraintSetEnd="@+id/end"
+        motion:constraintSetStart="@id/start"
+        motion:duration="1000">
+
+        <OnSwipe motion:touchAnchorId="@+id/my_main_constraint" />
+    </Transition>
 </MotionScene>
