fix: update VaccinesFragment

--- a/app/src/main/res/layout/fragment_vaccines.xml
+++ b/app/src/main/res/layout/fragment_vaccines.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
     tools:background="@color/white"
     tools:context=".ui.fragments.VaccinesFragment">
 
-    <!-- this constraintLayout contains all the cards for the vaccines -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_two"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_container_two"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <!-- this constraintLayout contains all the cards for the vaccines -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scrollbars="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_con"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintRight_toRightOf="parent">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/vaccines_guideline"
@@ -78,8 +81,8 @@
             <ImageView
                 android:id="@+id/pfizer_image"
                 style="@style/CardImage"
-                android:src="@drawable/pfizer"
                 android:padding="12dp"
+                android:src="@drawable/pfizer"
                 app:layout_constraintBottom_toBottomOf="@id/firstCard"
                 app:layout_constraintStart_toStartOf="@id/firstCard"
                 app:layout_constraintTop_toTopOf="@id/firstCard" />
@@ -135,8 +138,8 @@
             <ImageView
                 android:id="@+id/astrazeneca_image"
                 style="@style/CardImage"
-                android:src="@drawable/astrazeneca"
                 android:padding="10dp"
+                android:src="@drawable/astrazeneca"
                 app:layout_constraintBottom_toBottomOf="@id/card2"
                 app:layout_constraintStart_toStartOf="@id/card2"
                 app:layout_constraintTop_toTopOf="@id/card2" />
@@ -177,6 +180,7 @@
                 app:layout_constraintStart_toEndOf="@+id/vaccines_guideline"
                 app:layout_constraintTop_toBottomOf="@id/moderna_vaccine"
                 app:layout_constraintVertical_bias="0.1" />
+
             <TextView
                 android:id="@+id/type_3"
                 style="@style/CardDetails"
@@ -189,8 +193,8 @@
             <ImageView
                 android:id="@+id/moderna_image"
                 style="@style/CardImage"
-                android:src="@drawable/moderna"
                 android:padding="10dp"
+                android:src="@drawable/moderna"
                 app:layout_constraintBottom_toBottomOf="@id/card3"
                 app:layout_constraintStart_toStartOf="@id/card3"
                 app:layout_constraintTop_toTopOf="@id/card3" />
@@ -245,8 +249,8 @@
             <ImageView
                 android:id="@+id/j_and_j_image"
                 style="@style/CardImage"
-                android:src="@drawable/j_and_j"
                 android:padding="12dp"
+                android:src="@drawable/j_and_j"
                 app:layout_constraintBottom_toBottomOf="@id/card4"
                 app:layout_constraintStart_toStartOf="@id/card4"
                 app:layout_constraintTop_toTopOf="@id/card4" />
@@ -302,8 +306,8 @@
             <ImageView
                 android:id="@+id/sinopharm_image"
                 style="@style/CardImage"
-                android:src="@drawable/sinopharm"
                 android:padding="12dp"
+                android:src="@drawable/sinopharm"
                 app:layout_constraintBottom_toBottomOf="@id/card5"
                 app:layout_constraintStart_toStartOf="@id/card5"
                 app:layout_constraintTop_toTopOf="@id/card5" />
@@ -318,6 +322,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
