--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/secondaryBrandColor"
     app:layoutDescription="@xml/fragment_statistics_scene"
-    tools:context=".ui.statstics.StatisticsFragment">
+    tools:context=".ui.statistics.StatisticsFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/swipe_animation"
@@ -49,7 +49,7 @@
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_total"
-                android:text="Total"
+                android:text="@string/total"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:checked="true"
                 android:layout_width="wrap_content"
@@ -57,21 +57,21 @@
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_fully"
-                android:text="Fully"
+                android:text="@string/fully"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_daily"
-                android:text="Daily"
+                android:text="@string/daily"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_vaccinated"
-                android:text="Vaccinated"
+                android:text="@string/vaccinated"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
