--- a/app/src/main/res/layout/fragment_vaccine_details.xml
+++ b/app/src/main/res/layout/fragment_vaccine_details.xml
@@ -26,6 +26,7 @@
     <ImageButton
         android:background="@drawable/arrow_back"
         android:id="@+id/go_back_button"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -110,8 +111,6 @@
         app:layout_constraintStart_toStartOf="@+id/doses_card"
         app:layout_constraintTop_toBottomOf="@+id/doses_percent" />
 
-
-
     <androidx.cardview.widget.CardView
         android:id="@+id/efficacy_card"
         android:layout_width="wrap_content"
@@ -181,6 +180,7 @@
         android:id="@+id/type_text"
         style="@style/vaccineInfoHeadlinesDetails"
         tools:text="@string/type_of_vaccine"
+        android:visibility="gone"
         android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
