--- a/app/src/main/res/layout/item_vaccinated.xml
+++ b/app/src/main/res/layout/item_vaccinated.xml
@@ -4,20 +4,19 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+    android:layout_margin="4dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F5F5F5"
-        android:padding="4dp">
+        android:padding="8dp">
         
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image_country_flag"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:scaleType="centerCrop"
             app:shapeAppearance="@style/circleImageStyle"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,12 +29,13 @@
             android:id="@+id/text_country_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:drawablePadding="-25dp"
+            android:drawablePadding="-15dp"
             android:lines="1"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:paddingStart="5dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:paddingStart="10dp"
             app:layout_constraintTop_toTopOf="@id/image_country_flag"
             app:layout_constraintBottom_toBottomOf="@id/image_country_flag"
             app:layout_constraintStart_toEndOf="@id/image_country_flag"
@@ -48,7 +48,6 @@
             android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#FAFAFA"
             android:paddingVertical="4dp"
             app:layout_constraintTop_toBottomOf="@id/text_country_name"
             app:layout_constraintStart_toStartOf="parent"
