--- a/app/src/main/res/layout/item_vaccinated.xml
+++ b/app/src/main/res/layout/item_vaccinated.xml
@@ -30,18 +30,28 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:drawablePadding="-15dp"
-            android:lines="1"
             android:ellipsize="end"
             android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingStart="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
-            android:paddingStart="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/image_country_flag"
             app:layout_constraintTop_toTopOf="@id/image_country_flag"
             app:layout_constraintBottom_toBottomOf="@id/image_country_flag"
-            app:layout_constraintStart_toEndOf="@id/image_country_flag"
+            tools:text="Saint Vincent and the Grenadines" />
+
+        <ImageView
+            android:id="@+id/image_expand_collapse"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:scaleType="fitCenter"
+            android:layout_marginBottom="-10dp"
+            android:src="@drawable/ic_baseline_expand_more_24"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Saint Vincent and the Grenadines"
-            app:drawableBottomCompat="@drawable/ic_baseline_expand_more_24" />
+            app:layout_constraintBottom_toBottomOf="@id/image_country_flag"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/expandable_layout"
@@ -49,7 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingVertical="4dp"
-            app:layout_constraintTop_toBottomOf="@id/text_country_name"
+            app:layout_constraintTop_toBottomOf="@id/image_expand_collapse"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
