--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,6 +8,17 @@
     app:layoutDescription="@xml/fragment_statistics_scene"
     tools:context=".ui.statistics.StatisticsFragment">
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/search_404"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_visual_data"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/swipe_animation"
         android:layout_width="200dp"
