--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.statistics.StatisticsFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/search_404"
+        android:id="@+id/data_v"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_visual_data"
