--- a/app/src/main/res/layout/item_statistics.xml
+++ b/app/src/main/res/layout/item_statistics.xml
@@ -6,8 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp"
     app:cardElevation="5dp"
-    app:cardCornerRadius="24dp"
-   >
+    app:cardCornerRadius="24dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
